Now copes more gracefully with broken webcams. RSS now resizes images on the fly.

--- a/mobile_portal/mobile_portal/templates/rss/item_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/rss/item_detail.xhtml
@@ -18,7 +18,7 @@
     <h2 class="section-header">{{ item.title }}</h2>
     
     <div class="section-content">
-        {{ item.description|safe }}
+        {{ description|safe }}
     </div>
 </div>
 
