--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/base.css"/>
 {% endblock %}
     
+{% block scripts %}
 {% if touch or desktop %}
     <script type="text/javascript">
         require_location = {{ require_location|yesno:"true,false" }};
@@ -21,6 +22,7 @@
     <script src="{{ MEDIA_URL }}js/gears_init.js" type="text/javascript"></script>
     <script src="{{ MEDIA_URL }}js/geolocation.js" type="text/javascript"></script>
 {% endif %}
+{% endblock %}
 
 {% if device|device_has_parent:"apple_iphone_ver1" %}
     <link rel="apple-touch-icon" href="{{ MEDIA_URL}}png/apple-touch-icon.png"/>
