--- a/mobile_portal/mobile_portal/templates/404.html
+++ b/mobile_portal/mobile_portal/templates/404.html
@@ -1,13 +1,21 @@
 {% extends "base.xhtml" %}
 
+{% block scripts %}
+{% endblock %}
+
 {% block header %}
 {% endblock %}
+
+
 
 {% block breadcrumbs %}
 {% endblock %}
 
 {% block content %}
-404 Error
+Sorry, we couldn't find what you're looking for.
+Perhaps you'd like to head back to <a href="http://m.ox.ac.uk/">Mobile Oxford</a>?
+
+(404 Error)
 {% endblock %}
 
 
