--- a/mobile_portal/mobile_portal/templates/500.html
+++ b/mobile_portal/mobile_portal/templates/500.html
@@ -1,5 +1,8 @@
 {% extends "base.xhtml" %}
 
+{% block scripts %}
+{% endblock %}
+
 {% block header %}
 {% endblock %}
 
@@ -7,7 +10,9 @@
 {% endblock %}
 
 {% block content %}
-500 Error
+Sorry, something went wrong here. We've logged this and shall investigate soon!
+
+(500 Error)
 {% endblock %}
 
 
