--- a/mobile_portal/mobile_portal/templates/z3950/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/z3950/index.xhtml
@@ -18,8 +18,8 @@
 <div class="list-section">
     <h2 class="section-header">Contact Library Services</h2>
     <ul class="ml">
-        <li><a class="email" href="+mailto:reader.services@ouls.ox.ac.uk">E-mail<br/><small>reader.services@ouls.ox.ac.uk</small></a></li>
-        <li><a class="phone" href="+tel:+441865277162">Telephone<br/><small>01865 (2)77162</small></a></li>
+        <li><a class="email" href="mailto:reader.services@ouls.ox.ac.uk">E-mail<br/><small>reader.services@ouls.ox.ac.uk</small></a></li>
+        <li><a class="phone" href="tel:+441865277162">Telephone<br/><small>01865 (2)77162</small></a></li>
     </ul>
 </div>
 
