Removed favourites forms from maps pages. Prettified 404 and 500 pages.

--- a/mobile_portal/mobile_portal/templates/404.html
+++ b/mobile_portal/mobile_portal/templates/404.html
@@ -3,19 +3,14 @@
 {% block scripts %}
 {% endblock %}
 
-{% block header %}
-{% endblock %}
-
-
-
-{% block breadcrumbs %}
-{% endblock %}
+{% block pagetitle %}Not found{% endblock %}
+{% block title %}m.ox | 404 Not Found{% endblock %}
 
 {% block content %}
-Sorry, we couldn't find what you're looking for.
-Perhaps you'd like to head back to <a href="http://m.ox.ac.uk/">Mobile Oxford</a>?
-
-(404 Error)
+<div class="front-section">
+    <p>Sorry, we couldn't find what you're looking for.</p>
+    <p>Perhaps you'd like to head back to <a href="http://m.ox.ac.uk/">the home page</a>?</p>
+</div>
 {% endblock %}
 
 
