--- a/mobile_portal/mobile_portal/templates/500.html
+++ b/mobile_portal/mobile_portal/templates/500.html
@@ -3,16 +3,22 @@
 {% block scripts %}
 {% endblock %}
 
-{% block header %}
-{% endblock %}
-
-{% block breadcrumbs %}
-{% endblock %}
+{% block pagetitle %}Not found{% endblock %}
+{% block title %}m.ox | 404 Not Found{% endblock %}
 
 {% block content %}
-Sorry, something went wrong here. We've logged this and shall investigate soon!
-
-(500 Error)
+<div class="front-section">
+  <p>Sorry; something went wrong at our end.</p>
+  <p>We've sent an e-mail to the webmaster, so it should be fixed soon.</p>
+  <p>If you have any further information, questions or feedback, you can e-mail us at
+      <a href="mailto:mobileoxford@oucs.ox.ac.uk">mobileoxford@oucs.ox.ac.uk</a>.
+  </p>
+  <p id="alt-suggest">
+      Alternatively, you can try returning to the home page.
+  </p>
+  <script type="text/javascript">
+      suggest = document.getElementById('alt-suggest');
+      suggest.innerHTML = 'Alternatively, you can try <a href="#" onclick="javascript:history.back(1); return false;">going back</a> or returning to the home page.';
+  </script>
+</div>
 {% endblock %}
-
-
