--- a/mobile_portal/mobile_portal/site-media/css/desktop_about.css
+++ b/mobile_portal/mobile_portal/site-media/css/desktop_about.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Liberation Sans", Arial, sans-serif;
     margin:0;
-    background-color:#4b92db;
+    background-color:#cfd9e5;
 /*	background-image:url('../png/stripes.png'); */
     min-width:730px;
 }
