--- a/mobile_portal/mobile_portal/site-media/css/desktop_about.css
+++ b/mobile_portal/mobile_portal/site-media/css/desktop_about.css
@@ -1,9 +1,18 @@
 body {
-    font-family: "Liberation Sans", Arial, sans-serif;
+    font-family: Arial,"Liberation Sans", sans-serif;
     margin:0;
     background-color:#cfd9e5;
 /*	background-image:url('../png/stripes.png'); */
     min-width:730px;
+
+
+	color:#383838;
+	font-size:0.75em;
+	font-size-adjust:none;
+	font-style:normal;
+	font-variant:normal;
+	font-weight:normal;
+	line-height:1.33;
 }
 
 div.container {
