--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -35,7 +35,7 @@
           <img src="{{ MEDIA_URL }}png/desktop-logo.png" alt="Mobile Oxford" height="62" width="445"/>
         </h1>
         <div class="strapline">
-          In Oxford, at Oxford, from Oxford.
+          Mobile services for the University and City of Oxford
         </div>
       </div>
       <img class="brandmark" src="{{ MEDIA_URL }}gif/brandmarks/2231_ox_brand1_rev.gif" alt="University of Oxford" height="115" width="115" />
@@ -45,7 +45,7 @@
     <div class="container">
     
     <div class="about">
-        <em>Mobile Oxford</em> is a new service for students and staff at the
+        <em>Mobile Oxford</em> is a new service run for students and staff at the
         University of Oxford. Incorporating information and access to services
         from across the institution, <em>Mobile Oxford</em> is a central place
         to act as your guide in both the city and the University.
