--- a/mobile_portal/mobile_portal/site-media/css/desktop_about.css
+++ b/mobile_portal/mobile_portal/site-media/css/desktop_about.css
@@ -2,11 +2,8 @@ body {
     font-family: Arial,"Liberation Sans", sans-serif;
     margin:0;
     background-color:#cfd9e5;
-/*	background-image:url('../png/stripes.png'); */
     min-width:730px;
 
-
-	color:#383838;
 	font-size:0.75em;
 	font-size-adjust:none;
 	font-style:normal;
@@ -15,6 +12,9 @@ body {
 	line-height:1.33;
 }
 
+a {
+	text-decoration: none;
+}
 div.container {
     width:800px;
     margin-left:auto;
