--- a/mobile_portal/mobile_portal/site-media/css/desktop_about.css
+++ b/mobile_portal/mobile_portal/site-media/css/desktop_about.css
@@ -1,7 +1,8 @@
 body {
     font-family: Arial,"Liberation Sans", sans-serif;
     margin:0;
-    background-color:#cfd9e5;
+/*    background-color:#cfd9e5; */
+	background: #FFFFFF url(../png/desktop/backdrop.png) repeat-x scroll center top ;
     min-width:730px;
 
 	font-size:0.75em;
