--- a/mobile_portal/mobile_portal/site-media/css/desktop_about.css
+++ b/mobile_portal/mobile_portal/site-media/css/desktop_about.css
@@ -32,7 +32,7 @@ div.header {
     position:relative;
 /*    background-color:#c5d2e0;*/
     height:145px;
-/*	background-image:url('../png/header-gradient.png');*/
+
 }
 
 div.header-strapline {
@@ -43,6 +43,7 @@ div.header-strapline {
     padding:0;
     margin:0;
     margin-right:145px;
+	font-weight: bold;
 }
 
 div.header-strapline h1 {
