--- a/mobile_portal/mobile_portal/site-media/css/desktop_about.css
+++ b/mobile_portal/mobile_portal/site-media/css/desktop_about.css
@@ -44,6 +44,7 @@ div.header-strapline {
     margin:0;
     margin-right:145px;
 	font-weight: bold;
+	font-size: 1.5em;
 }
 
 div.header-strapline h1 {
