--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -2,7 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
   <head>
 	<title>Mobile Oxford</title>
-	/* Because MS fails standards */ <link rel="SHORTCUT ICON" href="{{ MEDIA_URL }}ico/favicon.ico"/>
+	<!-- MS Standard failure work around-->
+	<link rel="SHORTCUT ICON" href="{{ MEDIA_URL }}ico/favicon.ico"/>
+	
 	<link rel="icon" type="image/vnd.microsoft.icon" href="{{ MEDIA_URL }}ico/favicon.ico"/>
 	<link rel="icon" type="image/png" href="{{ MEDIA_URL }}png/favicon.png"/>
 	<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL}}css/desktop_about.css"/>
