Fix bug when there are missing affiliations.

--- a/mobile_portal/mobile_portal/templates/contact/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/contact/index.xhtml
@@ -73,7 +73,7 @@
       {% endifequal %}
         <span class="name">{{ person.name }}</span>
         <br/>
-        <small><span class="unit">{{ person.unit }}</span></small>
+        <small><span class="unit">{% if person.unit %}{{ person.unit }}{% else %}<em>Unknown affiliation</em>{% endif %}</span></small>
       </a>
     </li>
     {% endfor %}
