--- a/mobile_portal/mobile_portal/templates/z3950/search_form.xhtml
+++ b/mobile_portal/mobile_portal/templates/z3950/search_form.xhtml
@@ -1,7 +1,8 @@
 <div class="section-nopad">
     <h2 class="section-header">Search</h2>
     <div class="list-note"><div class="bubble">
-        Search by providing one or more of the following. You can use a '*' in place of an 'X' in an ISBN.
+        Search OLIS by either some subset of title and author, or by ISBN.
+{% if not device.has_qwerty_keyboard %} You may use a '*' in place of an 'X' in an ISBN.{% endif %}
     </div></div>
     <form method="get" action="{% url z3950_search %}">
     <table class="section-table">
