--- a/mobile_portal/mobile_portal/templates/z3950/item_holdings_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/z3950/item_holdings_detail.xhtml
@@ -67,7 +67,7 @@
 
 <div class="list-section">
     <h2 class="section-header">{{ library.location|join:" - " }}</h2>
-{% if library.oxpoints_id %}
+{% if library.oxpoints_id and library.oxpoints_location %}
     <div class="backgrounded-image" style="background-image:url('{% map_url library.oxpoints_location %}'); height:{{ device.max_image_height }}px">
         {% include "maps/map_elements.xhtml" %}
     </div>
