--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -42,7 +42,9 @@
           m.ox.ac.uk
         </div>
       </div>
-      <img class="brandmark" src="{{ MEDIA_URL }}gif/brandmarks/2231_ox_brand1_rev.gif" alt="University of Oxford" height="115" width="115" />
+      <a href="http://www.ox.ac.uk/">
+        <img class="brandmark" src="{{ MEDIA_URL }}gif/brandmarks/2231_ox_brand1_rev.gif" alt="University of Oxford" height="115" width="115" />
+      </a>
     </div>
     </div>
     
