--- a/mobile_portal/mobile_portal/templates/maps/osm/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/osm/base.xhtml
@@ -49,8 +49,7 @@
     This information is provided courtesy of
     <a href="http://www.openstreetmap.org/">OpenStreetMap</a> under a
     <a href="http://creativecommons.org/licenses/by-sa/2.0/">Creative Commons Attribution-ShareAlike 2.0</a> license.<br/>
-    Oxford University provides this information without warranty. For further
-    details, see our <a href="/legal/">legal information</a>.
+    Oxford University provides this information without warranty.
 </div>
 
 </div>
