--- a/mobile_portal/mobile_portal/templates/maps/map_elements.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/map_elements.xhtml
@@ -1,3 +1,4 @@
+{% if not zoom_controls|default:1 %}
     {% ifnotequal zoom 10 %}
         <a class="no-icon zoom-out" href="?zoom={{ zoom|add:"-1" }}">
             <img src="{{ MEDIA_URL }}png/icons/zoom-out.png" alt="Zoom out"/>
@@ -8,4 +9,5 @@
             <img src="{{ MEDIA_URL }}png/icons/zoom-in.png" alt="Zoom in"/>
         </a>
     {% endifnotequal %}
+{% endif %}
     <div class="osm-license">Map &copy; <a href="http://www.openstreetmap.org/">OpenStreetMap</a> and contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a></div>
