Minor changes to templates to give them more interesting page titles.

--- a/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
@@ -1,6 +1,8 @@
 {% extends "maps/base.xhtml" %}
 {% load maps %}
 
+{% block title %}m.ox | Bus stop: {{ entity.title }}{% endblock %}
+
 {% block extrahead %}
     <meta http-equiv="refresh" content="45" />
 {% endblock %}
