--- a/mobile_portal/mobile_portal/templates/maps/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/index.xhtml
@@ -3,6 +3,8 @@
 {% block pagetitle %}Maps{% endblock %}
 {% block pagetitleclass %}maps-header with-icon{% endblock %}
 
+{% block title %}m.ox | Maps{% endblock %}
+
 {% block content %}
 
 {% if preferences.maps.favourites %}
