--- a/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
@@ -1,5 +1,7 @@
 {% extends "maps/base.xhtml" %}
 
+{% block title %}m.ox | {{ entity_type.verbose_name_plural|capfirst }} near {% if entity %}{{ entity.type }}{% else %}me{% endif %}{% endblock %}
+
 {% block breadcrumbs %}
 {{ block.super }}
 {% if entity %}
