--- a/mobile_portal/mobile_portal/templates/maps/nearby_list.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/nearby_list.xhtml
@@ -1,5 +1,7 @@
 {% extends "maps/base.xhtml" %}
 
+{% block title %}m.ox | Maps - nearby{% endblock %}
+
 {% block breadcrumbs %}
 {{ block.super }}
 	<li><a href="{% url maps_index %}">
