Minor bug fixes. Added rel="nofollow" to zoom buttons and "things near here" links. Added rel="nofollow" to tidied HTML in RSS feeds.

--- a/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
@@ -61,7 +61,7 @@
 
 <ul class="ml">
     <li>
-    <a href="{% url maps_entity_nearby_list entity.entity_type.slug,entity.display_id %}">Find things near here</a>
+    <a href="{% url maps_entity_nearby_list entity.entity_type.slug,entity.display_id %}" rel="nofollow">Find things near here</a>
     </li>
 </ul>
 
