--- a/mobile_portal/mobile_portal/templates/500.html
+++ b/mobile_portal/mobile_portal/templates/500.html
@@ -3,8 +3,8 @@
 {% block scripts %}
 {% endblock %}
 
-{% block pagetitle %}Not found{% endblock %}
-{% block title %}m.ox | 404 Not Found{% endblock %}
+{% block pagetitle %}Server error{% endblock %}
+{% block title %}m.ox | 500 Server Error{% endblock %}
 
 {% block content %}
 <div class="front-section">
