--- a/mobile_portal/mobile_portal/templates/maps/category_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/category_detail.xhtml
@@ -3,7 +3,7 @@
 {% block breadcrumbs %}
 {{ block.super }}
 	<li><a href="{% url maps_index %}">
-        {% if dumb %}Maps{% else %}<img src="{{ MEDIA_URL }}png/maps-bc.png" alt="Maps"/>{% endif %}
+        {% if dumb %}Maps{% else %}<img src="{{ MEDIA_URL }}png/index-icons/maps-bc.png" alt="Maps"/>{% endif %}
     </a></li>
     <li><a href="{% url maps_category_list %}">
         {% if dumb %}Categories{% else %}&hellip;{% endif %}
@@ -11,6 +11,7 @@
 {% endblock %}
 
 {% block pagetitle %}{{ entity_type.verbose_name_plural|capfirst }}{% endblock %}
+{% block title %}m.ox | {{ entity_type.verbose_name_plural|capfirst }}{% endblock %}
 
 {% block content %}
 
