--- a/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
@@ -3,6 +3,7 @@
 
 {% block pagetitleclass %}podcasts-header with-icon{% endblock %}
 {% block pagetitle %}Podcasts{% endblock %}
+{% block title %}m.ox | Podcasts{% endblock %}
 
 {% block content %}
 
