--- a/mobile_portal/mobile_portal/templates/results/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/results/index.xhtml
@@ -2,6 +2,7 @@
 
 {% block pagetitleclass %}results-header with-icon{% endblock %}
 {% block pagetitle %}Results releases{% endblock %}
+{% block title %}m.ox | Results releases{% endblock %}
 
 
 {% block content %}
