--- a/mobile_portal/mobile_portal/templates/rss/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/rss/index.xhtml
@@ -1,7 +1,8 @@
 {% extends "rss/base.xhtml" %}
 
 {% block pagetitleclass %}rss-header with-icon{% endblock %}
-{% block pagetitle %}News{% endblock %}
+{% block pagetitle %}News feeds{% endblock %}
+{% block title %}m.ox | News feeds{% endblock %}
 
 {% block content %}
 
