--- a/mobile_portal/mobile_portal/templates/weather/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/weather/index.xhtml
@@ -2,6 +2,7 @@
 
 {% block pagetitleclass %}weather-header with-icon{% endblock %}
 {% block pagetitle %}Weather{% endblock %}
+{% block title %}m.ox | Weather{% endblock %}
 
 {% block content %}
 
