--- a/mobile_portal/mobile_portal/templates/webcams/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/webcams/index.xhtml
@@ -2,6 +2,7 @@
 
 {% block pagetitleclass %}webcams-header with-icon{% endblock %}
 {% block pagetitle %}Webcams{% endblock %}
+{% block title %}m.ox | Webcams{% endblock %}
 
 {% block content %}
 
