--- a/mobile_portal/mobile_portal/templates/core/update_location_container.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/update_location_container.xhtml
@@ -1,6 +1,7 @@
 {% extends "core/base.xhtml" %}
 
 {% block pagetitle %}Update location{% endblock %}
+{% block title %}m.ox | Update location{% endblock %}
 
 {% block content %}
 
