--- a/mobile_portal/mobile_portal/templates/maps/category_list.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/category_list.xhtml
@@ -3,11 +3,12 @@
 {% block breadcrumbs %}
 {{ block.super }}
 	<li><a href="{% url maps_index %}">
-        {% if dumb %}Maps{% else %}<img src="{{ MEDIA_URL }}png/maps-bc.png" alt="Maps"/>{% endif %}
+        {% if dumb %}Maps{% else %}<img src="{{ MEDIA_URL }}png/index-icons/maps-bc.png" alt="Maps"/>{% endif %}
     </a></li>
 {% endblock %}
 
 {% block pagetitle %}Categories{% endblock %}
+{% block title %}m.ox | Maps - categories{% endblock %}
 
 {% block content %}
 
