--- a/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
@@ -1,12 +1,12 @@
 {% extends "maps/base.xhtml" %}
 
-{% block title %}m.ox | {{ entity_type.verbose_name_plural|capfirst }} near {% if entity %}{{ entity.type }}{% else %}me{% endif %}{% endblock %}
+{% block title %}m.ox | {{ entity_type.verbose_name_plural|capfirst }} near{% if entity %} {{ entity.title }}{% else %}by{% endif %}{% endblock %}
 
 {% block breadcrumbs %}
 {{ block.super }}
 {% if entity %}
 	<li><a href="{% url maps_index %}">
-        {% if dumb %}Maps{% else %}<img src="{{ MEDIA_URL }}png/maps-bc.png" alt="Maps"/>{% endif %}
+        {% if dumb %}Maps{% else %}<img src="{{ MEDIA_URL }}png/index-icons/maps-bc.png" alt="Maps"/>{% endif %}
     </a></li>
     <li><a href="{% url maps_entity_nearby_list entity.entity_type.slug,entity.display_id %}">
         {% if dumb %}Categories{% else %}&hellip;{% endif %}
