--- a/mobile_portal/mobile_portal/templates/maps/oxpoints.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/oxpoints.xhtml
@@ -4,7 +4,7 @@
 {% block breadcrumbs %}
 {{ block.super }}
 	<li><a href="{% url maps_index %}">
-        {% if dumb %}Maps{% else %}<img src="{{ MEDIA_URL }}png/maps-bc.png" alt="Maps"/>{% endif %}
+        {% if dumb %}Maps{% else %}<img src="{{ MEDIA_URL }}png/index-icons/maps-bc.png" alt="Maps"/>{% endif %}
     </a></li>
     <li><a href="{% url maps_nearby_detail entity.entity_type.slug %}">
         {% if dumb %}{{ entity.entity_type.verbose_name_plural|capfirst }}{% else %}&hellip;{% endif %}</a></li>
@@ -12,7 +12,7 @@
 
 {% block pagetitle %}{{ data.dc_title }}{% endblock %}
 
-{% block title %}OMP | {{ data.dc_title }}{% endblock %}
+{% block title %}m.ox | {{ entity_type.verbose_name|capfirst }}: {{ data.dc_title }}{% endblock %}
 
 {% block content %}
 
