--- a/mobile_portal/mobile_portal/templates/webcams/webcam_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/webcams/webcam_detail.xhtml
@@ -8,11 +8,12 @@
 {% block breadcrumbs %}
 {{ block.super }}
             <li><a href="{% url webcams_index %}">
-                <img src="{{ MEDIA_URL }}png/webcams-bc.png" alt="Webcams"/>
+                <img src="{{ MEDIA_URL }}png/index-icons/webcams-bc.png" alt="Webcams"/>
             </a></li>
 {% endblock %}
 
 {% block pagetitle %}View{% endblock %}
+{% block title %}m.ox | Webcam: {{ webcam.title }}{% endblock %}
 
 
 {% block content %}
