Template updates to fix z3950 breadcrumb icons and improve entity_without_location appearance

--- a/mobile_portal/mobile_portal/templates/z3950/item_holdings_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/z3950/item_holdings_detail.xhtml
@@ -3,7 +3,7 @@
 {% block breadcrumbs %}
 {{ block.super }}
             <li><a href="{% url z3950_index %}">
-                <img src="{{ MEDIA_URL }}png/z3950-bc.png" alt="Library"/>
+                <img src="{{ MEDIA_URL }}png/index-icons/z3950-bc.png" alt="Library"/>
             </a></li>
             <li><a href="{% url z3950_item_detail control_number %}">
                 &hellip;
