Added maps back to library search.

--- a/mobile_portal/mobile_portal/templates/maps/nearby_list.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/nearby_list.xhtml
@@ -11,6 +11,8 @@
 
 {% block pagetitle %}Things nearby{% endblock %}
 
+{% block extrahead %}<meta name="robots" content="noindex"/>{% endblock %}
+
 {% block content %}
 
 <div class="list-section">
