--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -99,7 +99,7 @@
         <h3>Podcasts</h3>
         <p>
           Listen to any podcast published through the University's
-          <a href="http://podcasts.ox.ac.uk">podcast service</a>.
+          <a href="http://podcasts.ox.ac.uk">podcast service</a> and Apple's iTunes U.
         </p>
       </li>
       
