--- a/mobile_portal/mobile_portal/templates/static/about.xhtml
+++ b/mobile_portal/mobile_portal/templates/static/about.xhtml
@@ -36,4 +36,6 @@
 	<h2 class="section-header">Be aware</h2>
 	<div class="section-content">
 		<p>
-			Please note that using Mobile Oxford may incur a cost of data transmission from your network provider. Many providers now offer "unlimited" day, week or month passes according to you
+			Please note that using Mobile Oxford may incur a cost of data transmission from your network provider. Many providers now offer "unlimited" day, week or month passes, please check with your network provider for more information.</p>
+			</div>
+			</div>
