switched favicon to png version

--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -50,7 +50,7 @@
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}{{ path }}"/>    
 {% endfor %}
     
-	<link rel="icon" type="image/vnd.microsoft.icon" href="{{ MEDIA_URL }}ico/favicon.ico"/>
+	<link rel="icon" type="image/png" href="{{ MEDIA_URL }}png/favicon.png"/>
 
     {% block extrahead %}{% endblock %}
     
